--- a/shuzu-test.html
+++ b/shuzu-test.html
@@ -7,15 +7,18 @@
 </head>
 <body>
     <script>
-        var male=['孙权','濮徐杰','顾伟豪','杨吉','孔易飞']
+      function makePhrases() {
+        var name=['孙权','濮徐杰','顾伟豪','杨吉','孔易飞']
         var time=['早上','中午','晚上']
-        var where=['在教室','在宿舍','在操场','在厕所']
-        var site=['吃饭','睡觉','玩游戏','看书','洗澡','嘿嘿嘿','摔跤']
-        var a=male[Math.floor(Math.random()*male.length)]
-        var b=time[Math.floor(Math.random()*time.length)]
-        var c=where[Math.floor(Math.random()*where.length)]
-        var d=site[Math.floor(Math.random()*site.length)]
-        document.write(a+b+c+d)
+        var site=['在教室','在宿舍','在操场','在厕所']
+        var activity=['吃饭','睡觉','玩游戏','看书','洗澡','嘿嘿嘿','摔跤']
+        var phrase=chooseRandStrInArray(name)+""+chooseRandsssssssStrInArray(time)+""+chooseRandStrInArray(site)+""+chooseRandStrInArray(activity)
+        document.write(phrase)
+        function chooseRandStrInArray(array){
+          return array[Math.floor(Math.random()*array.length)]
+        }
+      }
+      makePhrases()
     </script>
 </body>
 </html>
